RESOLVED FIXED 182870
[WinCairo] Fix compile errors of WebProcess and NetworkProcess due to no implementation for windows
https://bugs.webkit.org/show_bug.cgi?id=182870
Summary [WinCairo] Fix compile errors of WebProcess and NetworkProcess due to no impl...
Yousuke Kimoto
Reported 2018-02-16 05:29:34 PST
Some WebKit sources of WebProcess and NetworkProcess don't have appropriate implementation for the windows port, so many compile errors occur. This ticket solves this issue which comes from the following files: - Source/WebKit/NetworkProcess/NetworkProcess.cpp - Source/WebKit/WebProcess/Plugins/PluginProcessConnectionManager.cpp - Source/WebKit/WebProcess/WebPage/WebInspector.cpp - Source/WebKit/WebProcess/WebPage/WebInspectorUI.cpp - Source/WebKit/WebProcess/WebProcess.cpp
Attachments
bz182870-1.patch (5.46 KB, patch)
2018-02-16 05:39 PST, Yousuke Kimoto
no flags
Yousuke Kimoto
Comment 1 2018-02-16 05:39:58 PST
Created attachment 334037 [details] bz182870-1.patch
WebKit Commit Bot
Comment 2 2018-02-21 13:41:11 PST
Comment on attachment 334037 [details] bz182870-1.patch Clearing flags on attachment: 334037 Committed r228893: <https://trac.webkit.org/changeset/228893>
WebKit Commit Bot
Comment 3 2018-02-21 13:41:12 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-02-21 13:44:24 PST
Chris Dumez
Comment 5 2018-02-21 14:19:47 PST
Was there discussion on the mailing list about adding support for Windows to WebKit2?
Note You need to log in before you can comment on or make changes to this bug.