Source/WebKit/WebProcess/WebPage/WebInspectorUI.cpp
@@ -58,6 +58,8 @@ void WebInspectorUI::establishConnection(IPC::Attachment encodedConnectionIdenti
     IPC::Connection::Identifier connectionIdentifier(encodedConnectionIdentifier.releaseFileDescriptor());
 #elif OS(DARWIN)
     IPC::Connection::Identifier connectionIdentifier(encodedConnectionIdentifier.port());
+#elif OS(WINDOWS)
+    IPC::Connection::Identifier connectionIdentifier(encodedConnectionIdentifier.handle());
 #else
     notImplemented();
     return;
