Source/WebKit/WebProcess/WebProcess.cpp
@@ -1131,6 +1131,8 @@ NetworkProcessConnection& WebProcess::ensureNetworkProcessConnection()
         IPC::Connection::Identifier connectionIdentifier = encodedConnectionIdentifier.releaseFileDescriptor();
 #elif OS(DARWIN)
         IPC::Connection::Identifier connectionIdentifier(encodedConnectionIdentifier.port());
+#elif OS(WINDOWS)
+        IPC::Connection::Identifier connectionIdentifier(encodedConnectionIdentifier.handle());
 #else
         ASSERT_NOT_REACHED();
 #endif
